Add Molecular Formula to LipidFragment